# Projet-Final-Reseaux

./: .gitignore  README.md
Client - Pirate/: ActiveConnexionVerification.cpp  ActiveConnexionVerification.h  CMakeLists.txt  Connexion.cpp  Connexion.h  ConnexionType.h  FichierDeTransfer.h  General.cpp  General.h  GestionPacket.cpp  GestionPacket.h  Packet.cpp  main.cpp
MyPNet/: CMakeLists.txt  IPEndpoint.cpp  IPEndpoint.h  IPVersion.h  IncludeMe.h  Message.cpp  Message.h  Network.cpp  Network.h  PResult.h  Packet.cpp  Packet.h  PacketType.h  Settings.h  Socket.cpp  Socket.h  SocketHandle.h  SocketOptions.h  SocketSendAndReceive.cpp
Serveur - Cible/: CMD.cpp  CMD.h  CMakeLists.txt  Client.cpp  Client.h  CommandPrompt.cpp  CommandPrompt.h  Connexion.cpp  Connexion.h  ConnexionType.h  Conversion.cpp  Conversion.h  CoreFunction.cpp  CoreFunction.h  FileTransferData.h  OperationState.h  PacketType.h  ParametresGeneraux.cpp  ParametresGeneraux.h  RrecptionEnvoie.cpp  Running.cpp  Running.h  ServiceMain.cpp  ServiceMain.h  Settings.cpp  Settings.h  StringConvertion.cpp  StringConvertion.h  Utility.cpp  Utility.h  cmdRedirect.cpp  cmdRedirect.h  installationAndStart.cpp  installationAndStart.h  main.cpp  utility.cpp
chudansmarde/: CMakeLists.txt  main.cpp
